Fix card position on mobile, add headers, fix roles position

--- a/index.css
+++ b/index.css
@@ -24,6 +24,14 @@ body {
 	min-height: 100vh;
 }
 
+h1 {
+	margin-bottom: 0px;
+}
+
+h4 {
+	margin-top: 15px;
+}
+
 .user {
 	display: inline-flex;
 	margin: 20px;
@@ -109,6 +117,13 @@ a {
 	font-weight: normal;
 	font-size: 20px;
 	text-decoration: none;
+}
+
+@media screen and (max-width: 500px) {
+	.user {
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 
 @media screen and (max-width: 1281px) {
